css/editor.css
.btn-primary {
	border-color: white;
	background-color: gray;
}

.btn-primary:hover {
	background-color: darkgray;
	border-color: darkgray;
}

textarea, .form-control {
	overflow-wrap: normal;
	overflow: visible;
	padding-left: 0em;
}

/*label {
	font-size: 75%;
	padding-bottom: 0px;
	padding-top: 10px;
}*/

#line-nums {
	padding-left: 2.5em;
	display: block;
}

